feat: implement retrieval methods with immutable return types